--- a/nova-compute.cfg
+++ b/nova-compute.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nova-compute
-version = 2014.2
+version = 2014.1.1
 summary = Cloud computing fabric controller
 description-file =
     README.rst
@@ -17,6 +17,7 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 2.6
+    Topic :: System :: Monitoring
 
 [global]
 setup-hooks =
@@ -29,7 +30,6 @@ install_lib = /usr/share
 packages =
     nova/compute
     nova/virt
-
 [entry_points]
 nova.image.download.modules =
     file = nova.image.download.file
@@ -159,7 +159,7 @@ output_dir = nova/locale
 input_file = nova/locale/nova.pot
 
 [bdist_rpm]
-requires = 
+requires =
     lvm2
     genisoimage
     openstack-nova-common
@@ -185,8 +185,5 @@ requires =
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = nova/locale/nova.pot
-
-[wheel]
-universal = 1
 
 post-install = nova-compute-install.sh
