--- a/nova-compute.cfg
+++ b/nova-compute.cfg
@@ -28,8 +28,10 @@ install_lib = /usr/share
 
 [files]
 packages =
-    nova/compute
-    nova/virt
+    nova
+
+data_files =
+    etc = etc/*
 
 [build_sphinx]
 all_files = 1
@@ -40,7 +42,7 @@ source-dir = doc/source
 requires =
     lvm2
     genisoimage
-    openstack-nova-common
+    openstack-nova-common = 2014.1-4.el6
     python-libguestfs
     rsync
     vconfig
