--- a/nova-compute.cfg
+++ b/nova-compute.cfg
@@ -30,7 +30,7 @@ packages =
     nova
 
 data_files =
-    etc/rc.d/init.d/openstack-nova-compute = etc/nova-compute
+    etc/rc.d/init.d = etc/openstack-nova-compute
 
 [entry_points]
 nova.image.download.modules =
